# spaghetti

./: .gitignore  AGENTS.md  ARCHITECTURAL_FLAWS.md  MISSING_ELSE_RULE_PROPOSAL.md  Makefile  README.es.md  README.fr.md  README.md  RUST_PORT_PROPOSAL.md  SDD.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/spaghetti/: __init__.py  ast_helpers.py  cli.py  config.py  detector.py  models.py  scanner.py  scoring.py  suppression.py
src/spaghetti/checks/: __init__.py  ast_per_file.py  package_level.py  text_per_file.py
tests/: test_detector.py
