[project]
name = "spaghetti-detector"
version = "1.3.0"
description = "Spaghetti-code and architectural-smell detector for Python projects"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    {name = "Luis Valverde"},
]
maintainers = [
    {name = "Luis Valverde", email = "lvalverdeb@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "boti>=1.0.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/lvalverdeb/repo-split"
Repository = "https://github.com/lvalverdeb/repo-split"
Documentation = "https://github.com/lvalverdeb/repo-split/tree/main/spaghetti#readme"
Issues = "https://github.com/lvalverdeb/repo-split/issues"

[project.scripts]
spaghetti = "spaghetti.detector:main"

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.11.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["spaghetti*"]

[tool.setuptools.package-data]
spaghetti = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
